[package]
name = "shellcode_in_remote_process"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3", features = ["winbase", "handleapi", "memoryapi", "processthreadsapi", "winnt"] }

